--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ html{
 body{
   width: 100%;
   height: 100%;
-  background: url("images/portfolioBg.jpeg") no-repeat center fixed;
+  background: url("images/background3.jpg") no-repeat center fixed;
   background-size: cover;
 }
 
@@ -187,7 +187,7 @@ li{
 
 .landingText{
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
@@ -198,11 +198,11 @@ li{
 .landingText h1{
   font-size: 13rem;
   font-family: fantasy;
-  color: goldenrod;
 }
 
 .landingText h6{
   font-size: 4rem;
+  color: goldenrod;
 }
 
 .about .container{
@@ -303,35 +303,22 @@ li{
   width: 50rem;
 }
 
-.portfolioDescription{
-  /* flex: 1; */
-
-}
-
 .portfolioDescription h1{
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 300;
   margin: 1rem 0;
 }
 
 .portfolioDescription h6{
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
   font-weight: 300;
   opacity: 0.3;
 }
 
-.portfolioDescription .cta{
-  display: inline-block;
-  margin-top: 2.5rem;
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  color: #3883ff;
-  transition: color 650ms;
-}
-
-.portfolioDescription .cta:hover{
-  color: #2f67cd;
+.portfolioDescription a{
+  color: rgb(231, 228, 24);
+  font-size: medium;
 }
 
 .contact{
@@ -347,23 +334,50 @@ form label{
   font-size: 1.5rem;
 }
 
-input,
-textarea{
-  width: 100%;
-  padding: 1rem;
-  margin-bottom: 5px;
-  border: none;
-  outline-color: #fd57bf;
+.contactitle{
+  margin-top: 5%;
 }
 
-input[type="submit"]{
-  width: initial;
-  color: #eee;
-  background-color: goldenrod;
-  padding: 1rem 2rem;
-  border-radius: .8rem;
-  cursor: pointer;
-  transition: background-color 650ms;
+#mc_embed_signup{
+  text-align: center;
+  width: 100%;
+}
+
+#name{
+  background: none;
+  width: 25%;
+  outline: 0;
+  padding: 10px;
+  border: 1px solid white;
+  color: white;
+  font-size: 18px;
+}
+
+#email{
+  background: none;
+  width: 25%;
+  outline: 0;
+  padding: 10px;
+  border: 1px solid white;
+  color: white;
+  font-size: 18px;
+  
+}
+
+#message{
+  background: none;
+  width: 52%;
+  outline: 0;
+  margin-top: 2.5%;
+  border: 1px solid white;
+  padding-bottom: 15%;
+  color: white;
+  font-size: 18px;
+}
+
+::placeholder{
+  color: white;
+  font-size: 18px;
 }
 
 .copyRight{
@@ -372,6 +386,12 @@ input[type="submit"]{
   padding: 2rem 0;
   background-color: #16162d;
   position: relative;
+}
+
+#submit{
+  background-color: goldenrod;
+  padding: 10px;
+  margin-top: 5px;
 }
 
 .up{
