--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ body{
   height: 100%;
   background: url("images/background3.jpg") no-repeat center fixed;
   background-size: cover;
+  color: white;
 }
 
 section{
@@ -127,7 +128,7 @@ li{
 
 .navLink:hover, 
 .navLink:focus{
-  background: linear-gradient(to top, #ffe838, #fd57bf);
+  background: linear-gradient(to top, #ffe838, white);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -156,7 +157,7 @@ li{
 }
 
 .bar{
-  background: linear-gradient(to right, #ffe838, #fd57bf);
+  background: linear-gradient(to right, #ffe838, white);
   width: 100%;
   height: 4px;
   border-radius: .8rem;
@@ -239,16 +240,8 @@ li{
   transition: color 650ms;
 }
 
-.fa-instagram :hover{
-  color: deeppink;
-}
-
-.fa-facbook :hover{
-  color: deeppink;
-}
-
-.fa-linkedin :hover{
-  color: deeppink;
+.socialMedia ul li :hover{
+  color: blue;
 }
 
 .mySkills{
