--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body{
   height: 100%;
   background: url("images/background3.jpg") no-repeat center fixed;
   background-size: cover;
-  colour: white;
+  color: white;
 }
 
 section{
